Fix code blocks in last line of side-content rendering inner scrollbar

--- a/src/styles/_workspace.scss
+++ b/src/styles/_workspace.scss
@@ -240,7 +240,7 @@ $code-color-error: #ff4444;
     }
 
     & > div > p:last-child {
-      margin-bottom: 0;
+      margin-bottom: 1px;
     }
 
     .GradingEditor {
